Products.MeetingLiege Changelog
===============================

4.1b5 (unreleased)
------------------

- Added state 'accepted_but_modified' in BG WF.
- MeetingObserverLocal role is only given on items when it is at least 'validated'
- Give the 'PloneMeeting: Read budget infos' permission to Reader in every item review_states
- Added 'back' shortcuts in item administrative process WF of BG

4.1b4 (2018-02-23)
------------------

- Simplified 'mayCorrect' for meeting and item WF condition adapters
- BG WF : added  'backToProposedToDirector' from 'validated' state
- BG WF : changed validate transition/validated state title so it can be translated
  differently than in College/Council
- BG WF : do BG reviewer able to validate item in state 'proposed_to_cabinet_manager'
- BG WF : defined item validation WF shortcuts like it is made for College item

4.1b3 (2018-01-31)
------------------

- 'Accept and return' transition also works when item not to send to Council, in this case,
  item is just duplicated and not sent to Council
- Adapted config.MEETINGREVIEWERS format
- Define RETURN_TO_PROPOSING_GROUP_STATE_TO_CLONE for 'meetingitembourgmestre_workflow' so
  'return_to_proposing_group' wfAdaptation is selectable
- Do not bind default workflow for Meeting/MeetingItem types so reapplying the workflows.xml
  portal_setup step do not change workflow selected on these types as it is different when
  managed by the MeetingConfig

4.1b2 (2018-01-23)
------------------
- Added 'Bourgmestre' MeetingConfig (workflow, adapters, ...) :
  - main_infos history on item
  - bourgmestre WFs for item and meeting
  - hide history transitions for relevant roles

4.1b1 (2017-12-01)
------------------
- When an item is sent from College to Council, keep the 'toDiscuss' field
- Do not call at_post_edit_script directly anymore, use Meeting(Item)._update_after_edit
- Moved to advanced tests/helpers.WF_STATE_NAME_MAPPINGS from PloneMeeting

4.0 (2017-08-18)
----------------