@@ -8,6 +8,8 @@ Products.MeetingLiege Changelog
 - MeetingObserverLocal role is only given on items when it is at least 'validated'
 - Give the 'PloneMeeting: Read budget infos' permission to Reader in every item review_states
 - Added 'back' shortcuts in item administrative process WF of BG
+- Removed 'itemcreated_waiting_advices' review_state leading icon as it is already added
+  by PloneMeeting.  Just override the icon title to fit the review_state translation
 
 4.1b4 (2018-02-23)
 ------------------
